# gles-debug-toolkit

./: .gitmodules  CMakeLists.txt  README.md
gdt_capture/: CMakeLists.txt
gdt_capture/src/: .capture.cpp.swp
gdt_common/: .CMakeLists.txt.swp  CMakeLists.txt
gdt_common/include/: .gdt_common.h.swp  ascii.hpp  gdt_common.h
gdt_common/src/: .init.cpp.swp  init.cpp
gdt_fps/: CMakeLists.txt
gdt_fps/src/: ascii.cpp  ascii.hpp  hooker.cpp  shader.h
gdt_info/: CMakeLists.txt  info.cpp
gdt_logger/: CMakeLists.txt
gdt_logger/src/: .egl_logger.cpp.swp  egl_logger.cpp  gles_logger.cpp
